# music-generation

./: .gitignore  README.md  TECH_REPORT.md  app.py  generate.py  pyproject.toml
backend/: Dockerfile  history.json  main.py  requirements.txt
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.js  page.js
